# config

./: LICENCE.md  README.md  alacritty.yml  allowed_signers  bacon.toml  bashrc  config.fish  copy.sh  gitconfig  helix.toml  hyprland.conf  hyprpaper.conf  lock.sh  nvim.lua  nvim.vim  setup.sh  ssh-agent.service  starship.toml  tmux.conf  waybar.json
Code/User/: keybindings.json  settings.json
VSCode/: settings.json
config/alacritty/: alacritty.toml
config/bacon/: prefs.toml
config/eww/: eww.scss  eww.yuck
config/fish/: config.fish
config/helix/: config.toml  languages.toml
config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
config/kitty/: kitty.conf
config/waybar/: config  style.css
eww/: eww.scss  eww.yuck
eww-hypr/: Cargo.toml  README.md
eww-hypr/src/: main.rs
home/: .gitconfig  .tmux.conf
nushell/: config.nu  env.nu
nvim/: init.vim
